cli/tests/snapshots/test_sign__sign.snap
---
source: tests/test_sign.rs
info:
  program: c2patool
  args:
    - sign
    - /Users/nsalvemini/Documents/repos/c2patool/tests/fixtures/C.jpg
    - "--manifest"
    - /Users/nsalvemini/Documents/repos/c2patool/tests/fixtures/ingredient_test.json
    - "--output"
    - /tmp/.tmpUE3y20/C.jpg
---
success: true
exit_code: 0
----- stdout -----
Sucessfully signed file to `[TEMP_FILE]

----- stderr -----


-----------

Note: Using default private key and signing certificate. This is only valid for development.
A permanent key and cert should be provided in the manifest definition or in the environment variables.
