cli/tests/snapshots/test_sign__sign_parent.snap
---
source: tests/test_sign.rs
info:
  program: c2patool
  args:
    - sign
    - /Users/nsalvemini/Documents/repos/c2patool/tests/fixtures/signed-images/C.jpg
    - "--manifest"
    - /Users/nsalvemini/Documents/repos/c2patool/tests/fixtures/ingredient_test.json
    - "--parent"
    - /Users/nsalvemini/Documents/repos/c2patool/tests/fixtures/signed-images/verify.jpeg
    - "--output"
    - /tmp/.tmpNfqlOA/signed-images/C.jpg
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----


-----------

Note: Using default private key and signing certificate. This is only valid for development.
A permanent key and cert should be provided in the manifest definition or in the environment variables.
